frontend/src/styles.css
/* General body styling */
body {
    font-family: Arial, sans-serif;
    background-color: #f4f4f4;
    margin: 0;
    padding: 0;
}

/* Centering the form */
.center {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

/* Styling the form container */
.container {
    background-color: white;
    padding: 40px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 400px;
}

/* Styling labels */
.label {
    margin-bottom: 5px;
    display: block;
    font-weight: bold;
}

/* Styling input fields */
input[type='text'],
input[type='password'] {
    width: 100%;
    padding: 10px;
    margin: 10px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

/* Styling the submit button */
button[type='submit'] {
    width: 100%;
    background-color: rgb(15, 15, 238);
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

button[type='submit']:hover {
    background-color: rgb(62, 62, 224);
}

/* Styling landing page button */
button[type='request'] {
    width: 25%;
    background-color: #0400ff;
    color: white;
    padding: 14px 20px;
    margin: 8px 100px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

button[type='request']:hover {
    background-color: rgb(62, 62, 224);
}

/* Styling links */
h2 {
    font-size: 0.7rem;
}

h2 a {
    color: blue;
    text-decoration: none;
}

h2 a:hover {
    text-decoration: underline;
}

/* Additional styling for the login title */
.h1 {
    color: #333;
}

/* Styling for Landing Page title*/
.heading {
    padding-top: 150px;
    padding-left: 25px;
}

.v {
    border-left: 8px solid #202ddd;
    margin-left: 65px;
    height: 60px;
}

.hA {
    color: #202ddd;
    margin-left: 15px;
    font-size: 40px;
    font-weight: bold;
}

.hB {
    line-height: 75%;
    margin-left: 50px;
    margin-bottom: 2rem;
    font-size: 150px;
    font-weight: bold;
    background: -webkit-linear-gradient(#0400ff, #ffffff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.hC {
    color: #8882be;
    margin-left: 70px;
    font-size: 25px;
    font-weight: bold;
}

/* Styling for landing about section */
.column {
    flex: 1;
    min-width: 250px;
    margin-bottom: 20px;
    margin-top: 600px;
}

.card {
    height: 325px;
    width: 325px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    border-radius: 10px;
    position: absolute;
    margin-left: 30px;
    bottom: 100px;

}

.card h2 {
    font-size: 20px;
    color: #0400ff;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

/* Add some padding inside the card container */
.card-container {
    text-align: center;
    padding: 32px 50px;
}

/* Responsive columns */
@media (max-width: 600px) {
    .column {
        width: 100%;
        display: block;
        margin-bottom: 20px;
    }
}

.card-icon {
    padding-bottom: 40px;
}

.card-art {
    display: block;
    margin-top: 375px;
    margin-left: auto;
    margin-right: auto;
    height: 45%;
    width: 45%;
}

#containers {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 20px;
    margin-top: 2rem;
    position: relative;
}



/* Styling for "Remember me" checkbox */
input[type='checkbox'] {
    margin: 10px 0;
}

/* Styling for home nav bar */
.nav-home {
    max-width: auto;
    margin: auto;
    padding: 16px 16px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 32px;
}

.nav-logo {
    max-width: 100px;
}

/* .nav-link {
    list-style: none;
    display: flex;
    align-items: center;
    gap: 48px;
} */

.link a {
    position: relative;
    padding-bottom: 10px;
    color: #0400ff;
}

.link a::after {
    content: "";
    position: absolute;
    height: 2px;
    width: 0;
    bottom: 0;
    left: 0;
    background-color: rgb(62, 62, 224);
    transition: all 0.3s ease;
}

.home-login {
    padding: 10px 25px;
    font-size: 16px;
    color: #fff;
    background-color: #0400ff;
    border-radius: 5px;
    cursor: pointer;
    transition: all 0.3s ease;
}

.home-login:hover {
    background-color: rgb(62, 62, 224);
}


.navButton {
    color: white;
    text-decoration: none;
    background-color: transparent;
    border: none;
    padding: 0;
}

.navButton:hover {
    color: rgba(255, 255, 255, 0.7);
    text-decoration: none;
    background-color: transparent;
}

.flash-message {
    color: green;
    background-color: #ebffeb;
    border: 1px solid green;
    padding: 10px;
    margin: 10px 0;
    border-radius: 5px;
    text-align: center;
}

/* .my-navbar-dark {
    background-color: #000000 !important;
}

.navbar.bg-dark {
    background-color: #000000 !important;
}
 */
.header {
    background-color: #808080;
    color: #f5f5f5;
    padding: 20px;
    border-radius: 5px;
    text-align: center;
    margin: 20px 0;
}

.border-dashed {
    border-top-style: dashed !important;
}

.container label {
    font-weight: bold;
}

.border-dashed.custom-border-color {
    border-top-color: #333333 !important;
    border-top-style: dashed !important;
}

